tests/semantic/valid/13_arithmetic_expr.tc
int main(void) {
    int a = 10;
    int b = 3;
    int c = (a + b) * 2 - (a / b) + (a % b);
    return c;
}
